--- a/Amanda/Amanda.csproj
+++ b/Amanda/Amanda.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,7 +46,9 @@
   <ItemGroup>
     <Compile Include="Amanda.cs" />
     <Compile Include="EndpointBuilder.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Verb.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
