--- a/Amanda_Sample_Project/packages.config
+++ b/Amanda_Sample_Project/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Amanda" version="0.1.0" targetFramework="net40" />
   <package id="Nancy" version="0.15.3" targetFramework="net40" />
   <package id="Nancy.Hosting.Aspnet" version="0.15.3" targetFramework="net40" />
 </packages>
