--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Amanda\packages.config" />
+  <repository path="..\Amanda_Sample_Project\packages.config" />
   <repository path="..\Tests\packages.config" />
   <repository path="..\WebTests\packages.config" />
 </repositories>
