--- a/Amanda_Sample_Project/packages.config
+++ b/Amanda_Sample_Project/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Amanda" version="0.1.0" targetFramework="net40" />
+  <package id="CsQuery" version="1.3.4" targetFramework="net40" />
+  <package id="FluentAssertions" version="2.0.0.1" targetFramework="net40" />
   <package id="Nancy" version="0.15.3" targetFramework="net40" />
   <package id="Nancy.Hosting.Aspnet" version="0.15.3" targetFramework="net40" />
+  <package id="Nancy.Testing" version="0.15.3" targetFramework="net40" />
+  <package id="NUnit" version="2.6.2" targetFramework="net40" />
 </packages>
